# interview_test_a

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.dev  README.md  docker-compose.yml  docs.json  pyproject.toml
.llm_utils/: Readme.md
.llm_utils/skills/grill-me/: SKILL.md
.llm_utils/skills/python-coding-style/: SKILL.md
docs/: export_schema.py  test_commands.md  to-do.md
src/: app.py  config.py  exceptions.py  main.py  models.py
src/db/: models.py
src/db/alembic/: alembic.ini  env.py
src/db/alembic/versions/: 8da0f11dc05c_create_documents_table.py
src/db/repository/: __init__.py  document.py
src/db/scripts/: app_db.py  ingest_data.py
src/elastic/: __init__.py  base.py  service.py
src/elastic/scripts/: create_index.py  delete_index.py  ingest_es_data.py
src/middleware/: repository.py
src/models/: __init__.py  config.py  document.py  error.py
src/routes/: __init__.py  documents.py  search.py
src/services/: elastic.py
src/services/elastic/: __init__.py
src/types/: elastic.py
tests/: conftest.py
tests/mocks/: elastic_mock.py
tests/mocks/data_generator/: __init__.py  documents.py
tests/mocks/db_operations/: __init__.py  documents.py
tests/mocks/elastic_operations/: __init__.py
tests/tests/: test_config.py
tests/tests/app/: test_documents.py  test_search.py
tests/tests/db/: test_migrations.py
tests/tests/elastic/: test_service.py
tests/tests/models/: test_config.py
tests/tests/routes/: test_search.py
